k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reddit-httproute
  namespace: default
spec:
  parentRefs:
    - name: reddit-gateway
  hostnames:
    - "reddit.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: reddit-backend-service
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: reddit-frontend-service
          port: 80
